Add struct CodeFormat to rs functions

--- a/deps/galois/CMakeLists.txt
+++ b/deps/galois/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.5...3.28)
 
 project(galois
-        VERSION 1.0.0
-        DESCRIPTION "Galois field arithmetic lib by Arash Partow")
+        VERSION 0.0.1
+        DESCRIPTION "Galois Field Arithmetic Library by Arash Partow")
 
 add_library(galois STATIC
     src/galois/GaloisField.cpp
