Add gmp and givaro libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,17 +7,25 @@ project(
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # clangd
 
-set(APP_SRC src/main.cpp src/ReedSolomon.cpp)
+# libraries
+set(GMP_VERSION 6.3.0)
+set(GMP_PATH /opt/homebrew/Cellar/gmp/${GMP_VERSION})
+find_library(
+  GMP_LIB
+  NAMES gmp
+  PATHS ${GMP_PATH}/lib)
 
-set(GIVARO_DIR deps/givaro)
-include_directories(${GIVARO_DIR}/include)
+set(GIVARO_PATH deps/givaro)
 find_library(
   GIVARO_LIB
   NAMES givaro
-  PATHS ${GIVARO_LIB}/lib)
+  PATHS ${GIVARO_PATH}/lib)
 
+include_directories(${GIVARO_PATH}/include ${GMP_PATH}/include)
+
+# app
+set(APP_SRC src/main.cpp src/ReedSolomon.cpp)
 add_executable(qriscool ${APP_SRC})
-target_link_libraries(qriscool PRIVATE GIVARO_LIB)
+target_link_libraries(qriscool PRIVATE ${GIVARO_LIB} ${GMP_LIB})
