Add test module, fix reversed coeffs bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ set(BUILD_TYPE "library")
 # libraries
 set(BREW_CELLAR /opt/homebrew/opt)
 set(BREW_INCLUDE /opt/homebrew/include)
+set(BREW_LIB /opt/homebrew/lib)
 
 set(DOCTEST_PATH ${BREW_CELLAR}/doctest)
 set(EMSCRIPTEN_PATH ${BREW_CELLAR}/emscripten)
@@ -25,15 +26,16 @@ set(LIB_SRC src/ReedSolomon.cpp)
 include(srcs.cmake)
 
 add_executable(rsiscool src/wasm.cpp ${LIB_SRC} ${NTL_SRC} ${GF2X_SRC})
-include_directories(
+target_include_directories(
+  rsiscool
   SYSTEM
   PRIVATE
   deps/ntl/include
   deps/gf2x
   deps/gf2x/fft
-  ${EMSCRIPTEN_PATH}/libexec/system/include
-  ${DOCTEST_PATH}/include)
+  ${EMSCRIPTEN_PATH}/libexec/system/include)
 
+target_compile_options(rsiscool PRIVATE -O2)
 set_target_properties(
   rsiscool
   PROPERTIES
@@ -43,5 +45,17 @@ set_target_properties(
 
 add_executable(rsiscool-tests src/test.cpp ${LIB_SRC} ${NTL_SRC} ${NTL_SRC_TEST} ${GF2X_SRC})
 set(doctest_DIR ${DOCTEST_PATH}/lib/cmake/doctest)
+
 find_package(doctest REQUIRED)
 target_link_libraries(rsiscool-tests PRIVATE doctest::doctest)
+
+# manually edit ntl config.h to disable gmp, cba to add all of gmps source files too
+target_include_directories(
+  rsiscool-tests
+  SYSTEM
+  PRIVATE
+  ${BREW_INCLUDE} ${BREW_INCLUDE}/gf2x ${DOCTEST_PATH}/include)
+
+target_compile_options(
+  rsiscool-tests PRIVATE -O0 -g -Wall -Wextra -Wshadow -pedantic
+                   -Wno-missing-field-initializers -Wno-deprecated-declarations)
