--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.0.3",
   "type": "module",
   "repository": "https://github.com/Xiione/rsiscool",
-  "module": "./dist/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js"
+    }
+  },
   "scripts": {
     "prepare": "npm run build",
     "build": "make all"
