--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./dist/index.js",
+    "./rsiscool": "./dist/rsiscool.js",
+    "./rsiscool_workers": "./dist/rsiscool_workers.js"
   },
   "scripts": {
     "prepare": "npm run build",
