Use npm-installed emsdk for building

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "scripts": {
     "prepare": "npm run build",
     "build": "make module"
+  },
+  "devDependencies": {
+    "emscripten-sdk-npm": "^0.3.2"
   }
 }
