--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "./rsiscool_workers": "./dist/rsiscool_workers.js"
   },
   "scripts": {
-    "prepare": "npx emsdk-checkout && npx emsdk install 3.1.74 && npx emsdk activate 3.1.74 && npm run build",
+    "prepare": "make prepare",
     "build": "make module"
   },
   "devDependencies": {
