Move module build to shell script

--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
     "./rsiscool_workers": "./dist/rsiscool_workers.js"
   },
   "scripts": {
-    "prepare": "make module",
+    "prepare": "./build_module.sh",
     "build": "make module"
-  },
-  "devDependencies": {
-    "emscripten-sdk-npm": "github:devappd/emscripten-sdk-npm#dc1bf3e"
   }
 }
