--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ set_target_properties(
   rsiscool_workers
   PROPERTIES
     LINK_FLAGS "\
-    -s ENVIRONMENT='worker'\
+    -s ENVIRONMENT='web'\
     -s SINGLE_FILE=0\
     -s MODULARIZE=1\
     -s EXPORT_ES6=1\
